--- a/ForeScore.WebMVC/Views/Post/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Edit.cshtml
@@ -18,6 +18,10 @@
 
     @Html.HiddenFor(model => model.PostId)
 
+    @Html.HiddenFor(model => model.RoundDetail.CourseId)
+
+    @Html.HiddenFor(model => model.RoundDetail.CourseDetail.CourseId)
+
     <div class="form-group">
         @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -33,6 +37,13 @@
             @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+    </div>
+
 
     if (Model.RoundId != null)
     {
@@ -69,6 +80,7 @@
                     {
                         <td>
                             @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.HiddenFor(model => Model.RoundDetail.CourseDetail.FrontNine[i].HoleId)
                         </td>
                     }
                 </tr>
@@ -103,6 +115,7 @@
 
                         <td>
                             @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Score, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.HiddenFor(model => Model.RoundDetail.FrontNine[i].HoleDataId, new { htmlAttributes = new { @class = "form-control", } })
                             @Html.HiddenFor(model => Model.RoundDetail.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
 
@@ -143,7 +156,7 @@
 
                         <td>
                             @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
-                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+
                         </td>
 
                     }
@@ -157,7 +170,7 @@
 
                         <td>
                             @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
-                            @Html.DisplayFor(model => Model.RoundDetail.FrontNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+
                         </td>
 
                     }
@@ -173,6 +186,7 @@
                     {
                         <td>
                             @Html.DisplayFor(model => Model.RoundDetail.CourseDetail.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.HiddenFor(model => Model.RoundDetail.CourseDetail.BackNine[i].HoleId)
                         </td>
                     }
                 </tr>
@@ -207,6 +221,7 @@
 
                         <td>
                             @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Score, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.HiddenFor(model => Model.RoundDetail.BackNine[i].HoleDataId, new { htmlAttributes = new { @class = "form-control", } })
                             @Html.HiddenFor(model => Model.RoundDetail.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                         </td>
 
@@ -247,7 +262,7 @@
 
                         <td>
                             @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
-                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+
                         </td>
 
                     }
@@ -261,7 +276,7 @@
 
                         <td>
                             @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
-                            @Html.DisplayFor(model => Model.RoundDetail.BackNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+
                         </td>
 
                     }
@@ -269,13 +284,6 @@
             </table>
         </div>
     }
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
-        </div>
-    </div>
-
 }
 
 <div>
