--- a/ForeScore.WebMVC/Content/Site.css
+++ b/ForeScore.WebMVC/Content/Site.css
@@ -29,11 +29,19 @@ textarea {
 }
 
 .panel .panel-heading {
-    padding-left: 0;
-    padding-right: 0;
+  border-left: 4cm;
+  border-right: 4cm;
 }
 
 h2 {
-    color: blue;
+    color: #0275d8;
+}
+
+.textboxform-control {
+    width: 4em;
+}
+
+.form-group .classwithpad {
+    padding-bottom: 20px;
 }
 
